--- a/style.css
+++ b/style.css
@@ -23,3 +23,11 @@ h3 {
     text-decoration: underline;
     color: purple;
 }
+
+h2, h3 {
+    border: 1px green;
+}
+
+* {
+    font-family: 'Poppins' sans-serif;
+}
