--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,23 @@
 h1 {
     font-size: 60px;
     color: rgb(1, 9, 20);
-    opacity: 0.7;
+    opacity: 1;
+}
+
+h2 {
+    font-size: 40px;
+    font-family: 'Losta Master' serif;
+    color: rgba(55, 60, 25, 0.9);
+
+}
+ 
+div {
+    
+    background-color: blueviolet;
+}
+
+body {
+    background-color: rgba(20, 35, 15, 0.4);
+    background-image: url(./images/back.jpg);
+    
 }
