--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,5 @@ div {
 }
 
 body {
-    background-color: rgba(20, 35, 15, 0.4);
-    background-image: url(./images/back.jpg);
-    background-repeat: repeat-x;
+    background: linear-gradient(to right, #ffcc23, #ff99ec, #fff);
 }
