--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,12 @@
 h1 {
+    letter-spacing: 2px;
     font-size: 60px;
     color: rgb(1, 9, 20);
     opacity: 1;
 }
 
 h2 {
-    font-size: 40px;
+    font-size: 48px;
     font-family: 'Losta Master' serif;
     color: rgba(55, 60, 25, 0.9);
 
@@ -18,13 +19,25 @@ div {
 
 body {
     height: 100vh;
-    background: repeating-radial-gradient(circle, orange, red, green);
+   /* background: repeating-radial-gradient(circle, orange, red, green);*/
 }
 
 p {
+    /*font-size: 16px;*/
+    font-family: 'Poppins' sans-serif;
     text-align: justify;
+    text-indent: 20px;
+    line-height: 1.5;
+
 }
 
 h3 {
-    text-decoration: underline;
+       font-size: large;
+       text-decoration: aqua underline dashed 2px;
+       text-underline-offset: 5px;
+}
+
+h4 {
+    font-size: 32px;
+    font-family: 'Losta Master' serif;
 }
