--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ h2 {
  
 div {
     
-    background-color: blueviolet;
+    background-color: gold;
 }
 
 body {
@@ -39,5 +39,5 @@ h3 {
 
 h4 {
     font-size: 32px;
-    font-family: 'Losta Master' serif;
+    font-family: cursive;
 }
