add more styling to the page and update the readme  file

--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,8 @@ h2 {
 div {
     
     background-color: gold;
+    width: 100px;
+    
 }
 
 body {
@@ -29,17 +31,31 @@ p {
     text-indent: 20px;
     line-height: 1.5;
     font-style: italic;
-    
+    border: 2px solid crimson;
+    /*height: 50px;*/
+    min-height: 10px;
+    /*max-height: 100px;*/
 }
 
 h3 {
        font-size: large;
        text-decoration: aqua underline dashed 2px;
        text-underline-offset: 5px;
+       border-left-style: dashed;
 }
 
 h4 {
     font-size: 32px;
     font-family: cursive;
     font-weight: bolder;
+    border-style: groove;
+    border-color: coral;
+}
+
+h6 {
+    font-size: 32px;
+    border: red  2px dashed;
+    margin: 10px 20px 25px 15px;
+    padding: 15px 20px 25px 15px;
+
 }
